# kindle-to-markdown

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml  sample_clippings.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  commit-conventions.yml  release-binaries.yml  release-plz.yml
scripts/: check-commit-message.sh  check-commit-range.sh
src/: lib.rs  main.rs  settings.rs
tests/: cli_e2e.rs
tests/fixtures/: bookmark-only.txt  malformed-chunks.txt  mixed-locale-date-variants.txt  one-line-page-absent.txt  one-line-page-present.txt  two-line-bom.txt  two-line-no-bom.txt
