[package]
name = "kindle-to-markdown"
version = "0.1.0"
edition = "2024"
description = "Convert Kindle My Clippings.txt exports into structured Markdown"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kaiogu/kindle-to-markdown"
rust-version = "1.89"
keywords = ["kindle", "markdown", "cli"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.5"
anyhow = "1.0"
